# gash

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
src/: args.rs  cli.rs  commit.rs  git.rs  hash.rs  macros.rs  main.rs  spiral.rs  time.rs
tests_integration/: macros.rs  mod.rs  test_config.rs  test_hook.rs  test_prefix.rs  test_signature.rs  util.rs
