[package]
name = "gash"
description = "Brute force your git hash!"
version = "0.10.0"
authors = ["Callum Oz <acheronfail@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Unlicense OR MIT OR Apache-2.0"
homepage = "https://github.com/acheronfail/gash"
repository = "https://github.com/acheronfail/gash"
build = "build.rs"

[[test]]
name = "integration"
path = "tests_integration/mod.rs"

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["cargo", "derive"] }
hex = "0.4.3"
pathdiff = "0.2.1"
rayon = "1.5.1"
regex = "1.5.5"
sha-1 = "0.10.0"
tempfile = "3.3.0"
termcolor = "1.1.3"

[dev-dependencies]
os_pipe = "1.0.1"
pretty_assertions = "1.2.1"

[build-dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["cargo", "derive"] }
clap_complete = "3.1.1"
