[package]
name = "gash"
description = "Brute force your git hash!"
version = "0.10.0"
authors = ["Callum Oz <acheronfail@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Unlicense OR MIT OR Apache-2.0"
homepage = "https://github.com/acheronfail/gash"
repository = "https://github.com/acheronfail/gash"
build = "build.rs"

[[test]]
name = "integration"
path = "tests_integration/mod.rs"

[dependencies]
anyhow = "1.0.33"
chrono = "0.4.19"
clap = { version = "3.0.0", features = ["cargo", "derive"] }
hex = "0.4.2"
pathdiff = "0.2.0"
rayon = "1.4.1"
regex = "1.4.1"
sha-1 = "0.9.1"
tempfile = "3.1.0"
termcolor = "1.1.0"

[dev-dependencies]
os_pipe = "0.9.2"
pretty_assertions = "0.6.1"

[build-dependencies]
anyhow = "1.0.33"
clap = { version = "3.0.0", features = ["cargo", "derive"] }
clap_complete = "3.0.0"
